--- a/sass/base/_accessibility.scss
+++ b/sass/base/_accessibility.scss
@@ -1,29 +1,1 @@
-@font-face {
-	font-family: "Inter";
-	font-weight: 400;
-	src: url("./fonts/Inter-Regular.ttf")format("truetype")
-}
-
-@font-face {
-	font-family: "Inter";
-	font-weight: 500;
-	src: url("./fonts/Inter-Medium.ttf")format("truetype")
-}
-
-@font-face {
-	font-family: "Inter";
-	font-weight: 600;
-	src: url("./fonts/Inter-SemiBold.ttf")format("truetype")
-}
-
-@font-face {
-	font-family: "Inter";
-	font-weight: 700;
-	src: url("./fonts/Inter-Bold.ttf")format("truetype")
-}
-
-@font-face {
-	font-family: "Roboto";
-	font-weight: 700;
-	src: url("./fonts/Roboto-Bold.ttf")format("truetype")
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap')
