--- a/sass/base/_element.scss
+++ b/sass/base/_element.scss
@@ -11,13 +11,14 @@ html:focus-within {
 body {
 	// padding: 0 1rem;
 	margin: auto;
-	background: var(--color-white);
-	font-family: var(--font-inter);
+	font-family: $fontTheme;
 	text-rendering: optimizeSpeed;
 	line-height: 1.2;
-	color: var(--color-text);
+	color: $colorText;
 	-moz-tab-size: 4;
 	tab-size: 4;
+	font-weight: 400;
+	font-size: $fontSize;
 	scroll-behavior: smooth;
 	word-break: break-word;
 	-webkit-tap-highlight-color: transparent;
@@ -120,7 +121,7 @@ abbr[title] {
 blockquote {
 	margin-left: 0;
 	padding: .5rem 0 .5rem 1.5rem;
-	border-left: .25rem solid var(--color-text);
+	border-left: .25rem solid $colorText;
 }
 
 blockquote> :last-child {
