--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,4 @@
-$primary:#1189ca;
+$primary:#1596d2;
 $secondary:#333;
 $light:#fff;
 $bgLight:#f0f4ff;
@@ -11,3 +11,5 @@ $fontTheme: 'Open Sans',sans-serif;
 $fontSize:1rem;
 
 $container:1330px;
+
+$padding:15px;
