--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,7 @@
 @import "base/accessibility";
 
 @import "components/layout";
+@import "components/mixin";
 @import "components/header";
 @import "components/footer";
 @import "components/archive";
