--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -3,3 +3,14 @@
 	max-width: $container;
 	margin: 0 auto;
 }
+
+.entry-thumbnail{
+	width: 100%;
+	height: 100%;
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+
+	}
+}
