--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -207,7 +207,46 @@ input {
 	}
 }
 
+ .modal{
+	position: fixed;
+	height:100vh;
+	width: 100vw;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	display: none;
+	&_body{
+		background-color: #00000064;
+		display: flex;
+		height: 100%;
+		width: 100%;
+		justify-content: center;
+		align-items: center;
+		overflow: auto;
 
+	}
+	&_content{
+
+		max-width: 600px;
+		display: none;
+		animation: fadeIn 1s linear;
+		position: relative;
+		&:nth-child(3){
+			max-width: 1000px;
+		}
+	}
+ }
+ @keyframes fadeIn{
+
+	from {
+		transform: translateY(-50%);
+		opacity: 0;
+	}
+	to {
+		// transform: translateY(0);
+		opacity: 1;
+	}
+ }
 @keyframes rotate {
 	from {
 		transform: rotate(0deg);
@@ -216,4 +255,88 @@ input {
 	to {
 		transform: rotate(360deg);
 	}
+}
+
+
+.contact{
+	background:$light;
+	padding: $fontSize;
+	width: 100%;
+	&_info{
+		display: flex;
+		background: $bgLight;
+		padding: $fontSize;
+	}
+	&_infoName{
+		width: 30%;
+	}
+	&_content{
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+	}
+	&_itemIcon{
+		width: 30px;
+		height: 30px;
+		margin: 0 $fontSize;
+	}
+	&_item{
+		display: flex;
+		align-items: center;
+		font-size: calc($fontSize - 2px);
+		font-weight: bold;
+	}
+	&_itemBox{
+		display: flex;
+		width: 25%;
+		align-items: center;
+	}
+	&_value{
+		flex: 1;
+	}
+
+	.btn{
+		width: auto;
+		padding: 10px 20px;
+		margin-left: auto;
+		margin-top: $fontSize;
+	}
+	&_infoName{
+		padding: 10px 40px 10px 0;
+		position: relative;
+		z-index: 2;
+		font-size: calc($fontSize + 4px);
+		line-height: 1.3;
+		color: #1189ca;
+		font-weight: bold;
+	}
+	&_form{
+		display: flex;
+		flex-direction: column;
+		background: $bgLight;
+		padding: $fontSize;
+		margin-top: $fontSize;
+	}
+	&_title{
+		font-size: calc($fontSize + 2px);
+		line-height: 1.3;
+		color: $primary;
+		text-transform: uppercase;
+		margin-bottom: 20px;
+		font-weight: bold;
+
+	}
+	.fluentform .ff-el-form-control {
+		background-color: $light !important;
+		color: #333333;
+		border-radius: 0;
+	}
+	.fluentform .ff-el-input--label{
+		font-size: calc($fontSize - 2px) !important;
+	}
+	.ff-btn{
+		width: 100px;
+		font-weight: bold !important;
+	}
+
 }
