--- a/sass/home.scss
+++ b/sass/home.scss
@@ -66,11 +66,13 @@
 .service {
 	padding: 0 10px;
 	position: relative;
-	&:hover{
-		img{
+
+	&:hover {
+		img {
 			transform: scale(1.2);
 		}
 	}
+
 	&_image {
 		position: relative;
 
@@ -165,11 +167,13 @@
 
 .postContent {
 	padding: 0 10px;
-	&:hover{
-		img{
+
+	&:hover {
+		img {
 			transform: scale(1.2);
 		}
 	}
+
 	&_image {
 		position: relative;
 
@@ -242,4 +246,97 @@
 
 
 	}
+}
+
+.partner {
+	background: $bgLight;
+	position: relative;
+
+	&::after {
+		content: '';
+		@include iconBg(0%, 30%, 300px, 300px, url('../images/bgicon.png'));
+	}
+
+	&_body {
+		position: relative;
+		z-index: 10;
+	}
+
+	&_item {
+		display: block;
+		padding: 0 10px;
+		overflow: hidden;
+
+		position: relative;
+		height: 140px;
+
+
+
+		.entry-thumbnail {
+			position: relative;
+			width: 100%;
+			height: 100%;
+			padding: $fontSize;
+			background: $light;
+			box-shadow: 0 0 5px 0 rgba(17, 137, 202, 0.1);
+			&::after,
+			&::before {
+				content: '';
+				position: absolute;
+				display: block;
+				transition: all .5s;
+			}
+
+			&::after {
+				top: 0;
+				bottom: 0;
+				left: 50%;
+				right: 50%;
+				border-bottom: 1px solid $primary;
+				border-top: 1px solid $primary;
+			}
+
+			&::before {
+				top: 50%;
+				bottom: 50%;
+				left: 0;
+				right: 0;
+				border-right: 1px solid $primary;
+				border-left: 1px solid $primary;
+			}
+
+			&:hover {
+				&::after {
+					left: 0%;
+					right: 0%;
+				}
+
+				&::before {
+					top: 0%;
+					bottom: 0%;
+				}
+			}
+		}
+
+		img {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			max-width: 50%;
+			object-fit: contain;
+		}
+
+
+	}
+}
+@media (max-width:1024px) {
+.homeBanner_item{
+	min-height: 50%;
+}
+.getTest{
+	&_box{
+		flex-direction: column;
+	}
+}
 }
