--- a/sass/abouts.scss
+++ b/sass/abouts.scss
@@ -28,10 +28,20 @@
 		display: flex;
 		list-style: none;
 		justify-content: center;
+
+		@media (max-width:768px) {
+			flex-direction: column;
+
+		}
 	}
 
 	.menu-item {
 		margin: 0 10px;
+
+		@media (max-width:768px) {
+			flex-direction: column;
+			margin: 5px 0;
+		}
 
 		&:is(.current-menu-item),
 		&:hover {
@@ -82,6 +92,10 @@
 	text-transform: uppercase;
 	font-weight: bold;
 	text-align: center;
+	@media (max-width:768px) {
+		font-size: calc($fontSize + 12px);
+
+	}
 }
 
 .wp-block-columns {
@@ -94,6 +108,10 @@
 	padding: 40px;
 	padding-left: 0;
 	background-color: $bgLight;
+	@media (max-width:768px) {
+		width: 100%;
+
+	}
 
 	&::before {
 		content: '';
@@ -116,6 +134,7 @@
 	}
 
 }
+
 .wp-block-image {
 	position: relative;
 	width: 100%;
@@ -136,8 +155,8 @@
 
 	}
 }
-.content{
+
+.content {
 	background: $bgLight;
 	padding: 30px 40px;
 }
-
