--- a/sass/single.scss
+++ b/sass/single.scss
@@ -307,3 +307,16 @@
 
 	}
 }
+
+@media (max-width:768px) {
+	.single{
+		&_title,&_contentTitle{
+			font-size: calc($fontSize + 12px);
+			line-height: 1.3;
+		}
+		&_body{
+			padding: 20px;
+			overflow: hidden;
+		}
+	}
+}
