--- a/sass/service.scss
+++ b/sass/service.scss
@@ -86,13 +86,11 @@
         &:hover{
             transition: color 0.5s ease-in-out;
         }
-        &:hover{
-            &::after{
-                right: 0;
-                transition: right 0.5s ease-in-out;
-
-            }
-
+        &:hover:after{
+            right: 0;
+            transition: right 0.5s ease-in-out;
+           
+            
         }
     }
     &_des{
@@ -215,6 +213,7 @@
         top: 0;
         bottom: 0;
         background-color: #118aca;
+       
     }
 
     // .serviceItem:nth-child(even) .serviceItem_title::hover{
@@ -222,7 +221,7 @@
     // }
     // .serviceItem:nth-child(even) .serviceItem_title:hover::after{
     //     right: 0;
-    //     transition: right 0.5s ease-in-out;
+    //     transition: right 0.5s ease-in-out; 
     // }
 
     .serviceItem:nth-child(odd) .serviceItem_title::before{
@@ -235,15 +234,16 @@
         bottom: 0;
         background-color: #34bfb7;
         z-index: -2;
-        transition: all .3s .5s ;
-
+              
     }
-    .serviceItem:nth-child(odd) .serviceItem_title:hover:before{
-
-        background-color: #118aca;
-
-
+    .serviceItem:nth-child(odd) .serviceItem_title:hover::after{
+        right: -35px;
+        // width: calc(100% + 35px);
+        // z-index: -1;
     }
+    
+
+    
 
 }
 
